Embedded_C_Basics/My_workspace/target/.metadata/.plugins/org.eclipse.cdt.ui/001HelloWorld.build.log
18:12:51 **** Incremental Build of configuration Debug for project 001HelloWorld ****
make -j12 all 
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -Wextra -Werror -Wfatal-errors -pedantic -pedantic-errors -Wconversion -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -Wextra -Werror -Wfatal-errors -pedantic -pedantic-errors -Wconversion -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../Src/sysmem.c:55:1: error: file-scope declaration of 'stack_ptr' specifies 'register' [-Wpedantic]
 register char * stack_ptr asm("sp");
 ^~~~~~~~
compilation terminated due to -Wfatal-errors.
make: *** [Src/subdir.mk:28: Src/sysmem.o] Error 1
make: *** Waiting for unfinished jobs....
../Src/syscalls.c:95:1: error: file-scope declaration of 'stack_ptr' specifies 'register' [-Wpedantic]
 register char * stack_ptr asm("sp");
 ^~~~~~~~
compilation terminated due to -Wfatal-errors.
make: *** [Src/subdir.mk:26: Src/syscalls.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

18:12:53 Build Failed. 5 errors, 0 warnings. (took 2s.39ms)

